--- a/index.html
+++ b/index.html
@@ -36,6 +36,10 @@
         <span data-node-name="text4">I realised, I wanted to do something</span>
         <strong data-node-name="text4Adjective">special</strong>.</p>
       <p class="idea-4" data-node-name="text5Entry">Because,</p>
+      <p class="idea-4-1">
+        <span data-node-name="text4-1">text4-1</span></p>
+        <p class="idea-4-2">
+          <span data-node-name="text4-2">text4-1</span></p>
       <p class="idea-5">
         <span data-node-name="text5Content">You are Special</span>
         <span class="smiley" data-node-name="smiley">:)</span>
