--- a/index.html
+++ b/index.html
@@ -50,8 +50,15 @@
       </p>
     </div>
     <div class="six">
-      <img src="img/lydia2.png" alt="" class="lydia-dp" data-node-name="imagePath">
-      <img src="img/hat.svg" alt="" class="hat">
+      <!-- <img src="img/lydia2.png" alt="" class="lydia-dp" data-node-name="imagePath"> -->
+      <div class="picture-component">
+        <img alt="Image 1" data-node-name="imagePath1" />
+        <img alt="Image 2" data-node-name="imagePath2" />
+        <img alt="Image 3" data-node-name="imagePath3" />
+        <img alt="Image 4" data-node-name="imagePath4" />
+        <img alt="Image 5" data-node-name="imagePath5" />
+        <img alt="Image 6" data-node-name="imagePath6" />
+      </div>
       <div class="wish">
         <h3 class="wish-hbd" data-node-name="wishHeading">Happy Birthday!</h3>
         <h5 data-node-name="wishText">May the js.prototypes always be with you! ;)</h5>
